# db-tail

./: Cargo.toml  LICENSE  README.md
src/: main.rs
