[package]
name = "db-tail"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to tail message db."
repository = "https://github.com/jacobat/db-tail"
license = "MIT"
readme = "README.md"

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
uuid = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored_json = "5.0.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
